# password_manager

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  password_data.json
.github/workflows/: build.yml
src/: handlers.rs  lang.rs  main.rs  utils.rs
src/helpers/: generate_password.rs  handlers.rs  mod.rs  utils.rs
src/pages/: add_password.rs  add_pwd.rs  login.rs  main_page.rs  mod.rs  modify_password.rs  password_list.rs  registration.rs
